# MSU_interpol

./: FCNN_experiments.py  FCNN_for_crossection.ipynb  FCNN_lightning.ipynb  FCNN_maid.py  FCNN_replicas.py  FCNN_replicas_ft.py  FCNN_train.py  FCNN_unified.py  README.md  SFCS.ipynb  Small_net_for_pi_plus_n.ipynb  XGB_for_crossection.ipynb  analysis_ft.ipynb  calculations_of_MAID.ipynb  checks_unified.ipynb  checks_unified_bootstrap.py  model_paths.py  pyproject.toml  replicas_ds_and_checks_unified.ipynb  structure_function_W_A.ipynb  structure_functions.ipynb
docs/: ГолдаАВ_тезисы.docx
legacy_notebooks/: XGB_for_crossection.ipynb  analysis_ft.ipynb  structure_function_W_A.ipynb
legacy_notebooks/training/: FCNN_lightning.ipynb  FCNN_lightning_diff_energies.ipynb  FCNN_unified.py  checks.ipynb  cross_sections.ipynb
legacy_notebooks/training/final_checks/: checks_unified.ipynb
legacy_notebooks/training/trainin_struct_func/: FCNN_unified_sf.py  checks_sf.ipynb  construct_df.ipynb
lightning_logs/version_0/: events.out.tfevents.1687732493.MOS-02F5144MD6P.38636.0
models/: 5_60_layers  7_desc_layers  7_desc_layers_3k
training/: FCNN_lightning.ipynb  FCNN_lightning_diff_energies.ipynb  FCNN_lightning_with_phi_loss.ipynb  FCNN_lightning_with_phi_loss_by_enerigies.ipynb  FCNN_unified.py  checks.ipynb  cross_sections.ipynb
training/final_checks/: checks_unified.ipynb
training/lightning_logs/version_0/: events.out.tfevents.1702823026.MOS-02F5144MD6P.40454.5
training/lightning_logs/version_1/: events.out.tfevents.1702855664.MOS-02F5144MD6P.50953.0
training/trainin_struct_func/: FCNN_unified_sf.py  construct_df.ipynb
(+10 files in other folders)
