[tool.poetry]
name = "msu-interpol"
version = "0.1.0"
description = ""
authors = ["GOLoDovkA-A <mr.andrey.golda@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
wandb = "^0.16.1"
numpy = "^1.1.0"
pandas = "^2.1.2"
scikit-learn = "^1.0.2"
matplotlib = "^3.8.2"
xgboost = "^2.1.0"
seaborn = "^0.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
